save to upsert in ui

--- a/client/one/partials/account_credit_item_modal.html
+++ b/client/one/partials/account_credit_item_modal.html
@@ -123,7 +123,7 @@
 
         <div class="form-group">
             <div class="col-xs-3">
-                <button type="button" class="btn btn-primary" ng-click="saveCreditItem()">Save</button>
+                <button type="button" class="btn btn-primary" ng-click="upsertCreditItem()">Save</button>
             </div>
             <div class="col-xs-3">
                 <button type="button" class="btn btn-default" ng-click="discardCreditItem()">Discard</button>
