--- a/client/one/partials/campaign_budget_item_modal.html
+++ b/client/one/partials/campaign_budget_item_modal.html
@@ -93,7 +93,7 @@
         </div>
         <div class="form-group">
             <div class="col-xs-3">
-                <button type="button" class="btn btn-primary" ng-click="saveBudgetItem()">Save</button>
+                <button type="button" class="btn btn-primary" ng-click="upsertBudgetItem()">Save</button>
             </div>
             <div class="col-xs-3">
                 <button type="button" class="btn btn-default" ng-click="discardBudgetItem()">Discard</button>
