basic frontend and backend done

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -3083,16 +3083,16 @@ zem-submission-status {
 
 
 select.media-source-select {
-    height: 150px;
+    height: 250px;
     width: 100%;
 }
 
 
-
 .media-source-control-row {
     margin-top: 5px
+}
 
 .no-dropdown {
-    width: 100%;
     overflow: auto;
+    width: 100%;
 }
