--- a/client/one/partials/add_conversion_goal_modal.html
+++ b/client/one/partials/add_conversion_goal_modal.html
@@ -46,7 +46,7 @@
                     </ui-select-choices>
                 </ui-select>
             </div>
-            <div class="col-xs-8" ng-if="(availablePixels.length == 0)">
+            <div class="col-xs-8" ng-if="availablePixels.length === 0">
                 <p class="form-control-static">
                 Not available. You must first
                 <a ng-if="hasPermission('zemauth.account_agency_view')" ng-href="/accounts/{{ account.id }}/agency" target="_blank">set up a conversion pixel</a>
@@ -55,7 +55,7 @@
             </div>
 
             <!-- This div is here to move error messages below the value field (it serves as a blank label) -->
-            <div class="col-xs-4" ng-if="(availablePixels.length == 0)"></div>
+            <div class="col-xs-4" ng-if="availablePixels.length === 0"></div>
 
             <div class="col-xs-4">
                 <label ng-repeat="error in errors.goalId" class="control-label small error" for="pixel-slug-select">{{ error }}</label>
