--- a/client/one/partials/add_conversion_goal_modal.html
+++ b/client/one/partials/add_conversion_goal_modal.html
@@ -49,7 +49,7 @@
             <div class="col-xs-8" ng-if="!availablePixels.length">
                 <p class="form-control-static">
                 Not available. You must
-                <a ng-if="hasPermission('zemauth.account_agency_view')" ng-href="/accounts/{{ account.id }}/agency" target="_blank">set up a conversion pixel</a>
+                <a ng-if="hasPermission('zemauth.account_agency_view')" ng-href="/accounts/{{ account.id }}/agency" target="_self">set up a conversion pixel</a>
                 <span ng-if="!hasPermission('zemauth.account_agency_view')">set up a conversion pixel</span> first.
                 </p>
             </div>
