changed how credits and budgets can be edited

--- a/client/one/partials/account_credit_item_modal.html
+++ b/client/one/partials/account_credit_item_modal.html
@@ -55,7 +55,7 @@
             <div class="col-xs-4">
                 <div class="input-group">
                     <span class="input-group-addon">$</span>
-                    <input id="amount-input" type="text" class="form-control" ng-model="creditItem.amount" ng-disabled="creditItem.isSigned" zem-currency-input fraction-size="0">
+                    <input id="amount-input" type="text" class="form-control" ng-model="creditItem.amount" zem-currency-input fraction-size="0">
                     <div class="input-group-addon">.00</div>
                 </div>
             </div>
