Disable pingdom, fullstory and intercom when in Django DEBUG mode

--- a/server/zemauth/templates/zemauth/set_password.html
+++ b/server/zemauth/templates/zemauth/set_password.html
@@ -46,12 +46,14 @@
 </div>
 {% endif %}
 
+{% if not debug %}
 <script type="text/javascript">
 var email = document.forms[0].elements['email'].value;
-
+sdfasdf
 FS.identify(email, {
     displayName: email,
     email: email
 });
 </script>
+{% endif %}
 {% endblock %}
