--- a/client/one/partials/account_agency.html
+++ b/client/one/partials/account_agency.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="form-group" ng-if="hasPermission('zemauth.can_modify_allowed_sources')">
-            <label for="media-sources-options-choices" class="col-xs-2 control-label">Media Sources {{hasPermission('zemauth.can_modify_allowed_sources')}} <zem-help-popover content="Media sources made available on this account." placement="top"></zem-help-popover></label>
+            <label for="media-sources-options-choices" class="col-xs-2 control-label">Media Sources <zem-help-popover content="Media sources made available on this account." placement="top"></zem-help-popover></label>
 
 
             <div class="col-xs-10">
