style fix for media sources control api

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -3086,6 +3086,7 @@ zem-submission-status {
 
 select.media-source-select {
     height: 250px;
+    width: 100%;
 }
 
 .publishers-blacklist-bigdrop {
