--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -3090,3 +3090,16 @@ zem-submission-status {
     width: 100%;
     overflow: auto;
 }
+
+.page-campaign-agency .default-settings {
+    h3 {
+        margin-top: 0;
+    }
+    padding: 0 15px 1px 15px;
+    background-color: #f7f7f7;
+    margin-bottom: 20px;
+}
+
+.selected-locations {
+    background-color: #fff;
+}
