--- a/client/one/partials/ad_group_settings.html
+++ b/client/one/partials/ad_group_settings.html
@@ -89,7 +89,7 @@
             <div class="form-group" ng-class="{'has-error': !!errors.targetRegions}">
                 <label class="col-xs-2 control-label">
                     Locations
-                    <zem-help-popover content="The countries and DMA regions where your content ads should be shown." placement="top"></zem-help-popover>
+                    <zem-help-popover content="The countries, states and DMA regions where your content ads should be shown." placement="top"></zem-help-popover>
                 </label>
 
                 <div class="col-xs-6 col-md-4">
