--- a/client/one/partials/zem_export_plus.html
+++ b/client/one/partials/zem_export_plus.html
@@ -1,19 +1,1 @@
-<ui-select config
-    theme="select2"
-    search-enabled="false"
-    ng-model="export.type"
-    class="export">
-    <ui-select-match placeholder="Download Report">Download Report</ui-select-match>
-    <ui-select-choices repeat="option in options | filter:{hidden: '!true'}" ui-disable-choice="option.disabled">
-      <div ng-if="option.disabled"
-           zem-lazy-popover-text="This report is not available for download due to the volume of content. Please contact your account manager for assistance."
-           zem-lazy-popover-placement="left"
-           zem-lazy-popover-animation-class="fade"
-           zem-lazy-popover-append-to-body="true">
-            {{option.name}}
-      </div>
-      <div ng-if="!option.disabled" ng-click="downloadReport(option.value)">
-            {{option.name}}
-      </div>
-    </ui-select-choices>
-</ui-select>
+<button type="button" class="btn btn-default" ng-click="showAddScheduledReport()">Export Report</button>
