Work in progress - added directives infobox and infobox setting

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -653,6 +653,20 @@ div[datepicker] {
     color: #454545;
 }
 
+
+.infobox-setting-label {
+	width: 100px;
+	max-width: 100px;
+	overflow: hidden;
+	display: inline-block;
+}
+
+.infobox-setting-value {
+	display: inline;
+	vertical-align: top;
+}
+
+
 .chart-hidden {
     display: none;
 }
