Added some more variables to scope

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -661,11 +661,24 @@ div[datepicker] {
 	display: inline-block;
 }
 
-.infobox-setting-value {
+.infobox-setting-value{
 	display: inline;
 	vertical-align: top;
 }
 
+.infobox-setting-icon {
+	display: inline-block;
+	vertical-align: top;
+ }
+
+.infobox-setting-additional-info {
+	display: inline-block;
+	vertical-align: top;
+}
+
+.infobox-setting-additional-info-dropped {
+	display: block;
+}
 
 .chart-hidden {
     display: none;
