--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -6,7 +6,7 @@
 
     <div>
         <zem-infobox-setting label="'a bit longer than usual key'"  value="'value'" />
-        <zem-infobox-setting label="'key'"  value="'value'" />
+        <zem-infobox-setting label="'key'"  value="'value'" details-label="'Test'" details-content="'Test'" />
         <zem-infobox-setting label="'key'"  value="'value'" />
     </div>
 
