Removes "Warning" text

--- a/client/one/partials/ad_group_publishers.html
+++ b/client/one/partials/ad_group_publishers.html
@@ -41,7 +41,7 @@
                 </span>
             </div>
             <div>
-                * Warning: not all media sources support publisher-level transparency, so totals in this view might not match the totals in media sources and content ads views.
+                * Please note that not all media sources support publisher-level transparency, so totals in this view might not match the totals in media sources and content ads views.
             </div>
             <div>* All times are in Eastern Standard Time (EST).</div>
         </div>
