Work in progress - elements are now sensibly positioned.

--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -1,20 +1,29 @@
-<div>
+<div class="infobox infobox-background">
     <div>
         Title<br />
         Subtitle
     </div>
 
+    <hr>
+
     <div>
-        <zem-infobox-setting label="'a bit longer than usual key'"  value="'value'" />
-        <zem-infobox-setting label="'key'"  value="'value'" details-label="'Test'" details-content="'Test'" />
-        <zem-infobox-setting label="'key'"  value="'value'" />
+        <zem-infobox-setting label="'a bit nger than usual key'"  value="'value'" value-description="'Test'"></zem-infobox-setting>
+        <zem-infobox-setting label="'a bit longer than usual key'"  value="'value'" value-description="'Test'"></zem-infobox-setting>
+        <zem-infobox-setting label="'key'"  value="'value'" details-label="'Test'" details-content="'Test'"></zem-infobox-setting>
+        <zem-infobox-setting label="'key'"  value="'value'" details-label="'Test'" details-content="'Test'"></zem-infobox-setting>
     </div>
 
     <hr>
 
     <div>
-        <zem-infobox-setting label="'key'"  value="'value'" /><br />
-        <zem-infobox-setting label="'key'"  value="'value'" /><br />
-        <zem-infobox-setting label="'key'"  value="'value'" /><br />
+        <zem-infobox-setting label="'a bit longer than usual key'"  value="'value'" value-description="'Test'"></zem-infobox-setting>
+        <zem-infobox-setting label="'a bit longer than usual key'"  value="'value'" value-description="'Test'"></zem-infobox-setting>
+        <zem-infobox-setting label="'a bit longer than usual key'"  value="'value'" value-description="'Test'"></zem-infobox-setting>
+        <zem-infobox-setting label="'a bit longer than usual key'"  value="'value'" value-description="'Test'"></zem-infobox-setting>
+        <zem-infobox-setting label="'key'"  value="'value'" />
+        <!--
+        <zem-infobox-setting label="'key'"  value="'value'" />
+        <zem-infobox-setting label="'key'"  value="'value'" />
+        -->
     </div>
 </div>
