--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -654,16 +654,52 @@ div[datepicker] {
 }
 
 
+.graph-infobox-parent {
+	display: inline-block; 
+	width: 100%; 
+	position: relative; 
+	overflow: hidden;
+}
+
+.graph-container {
+	display: inline-block;
+	width: 60%
+}
+
+.infobox-container {
+	display: inline-block;
+	width: 40%;
+	position: absolute; 
+	height: 100%; 
+	overflow: auto
+}
+
+.infobox-background {
+	background: #f6f6f6;
+}
+
+.infobox {
+	padding: 5px;
+}
+
 .infobox-setting-label {
 	width: 100px;
 	max-width: 100px;
 	overflow: hidden;
 	display: inline-block;
+	color: #aaaaaa;
 }
 
-.infobox-setting-value{
+.infobox-setting-value {
 	display: inline;
 	vertical-align: top;
+	color: #454545;
+}
+
+.infobox-setting-value-comment { 
+	display: inline;
+	vertical-align: top;
+	color: #aaaaaa;
 }
 
 .infobox-setting-icon {
@@ -671,13 +707,23 @@ div[datepicker] {
 	vertical-align: top;
  }
 
-.infobox-setting-additional-info {
+.infobox-details-link {
+	cursor: pointer;
+}
+
+.infobox-setting-info {
 	display: inline-block;
 	vertical-align: top;
 }
 
-.infobox-setting-additional-info-dropped {
+.infobox-setting-info-dropped {
 	display: block;
+}
+
+.infobox-setting-info-dropped-content {
+	background: white;
+	margin: 5px;
+	border: 1px solid #aaaaaa;
 }
 
 .chart-hidden {
