--- a/client/one/partials/ad_group_contentadsplus.html
+++ b/client/one/partials/ad_group_contentadsplus.html
@@ -1,11 +1,12 @@
 <div class="page page-ad-group-ads-plus">
     <div class="section">
-        <div style="width:70%; float:left">
-           <zem-chart ng-class="{'chart-hidden': chartHidden}" zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
-        </div>
-        <div style="width:30%; float:right;">
-            <!--  ng-class="{'infobox-hidden': infoboxHidden}" -->
-            <zem-infobox></zem-infobox>
+        <div class="graph-infobox-parent">
+            <div class="graph-container">
+                <zem-chart ng-class="{'chart-hidden': chartHidden}" zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
+            </div>
+            <div class="infobox-container">
+                <zem-infobox></zem-infobox>
+            </div>
         <div>
     </div>
     </div>
