--- a/client/one/partials/zem_infobox_setting.html
+++ b/client/one/partials/zem_infobox_setting.html
@@ -14,15 +14,17 @@
     </div>
     <div class="infobox-setting-label">{{label}}</div>
     <div class="infobox-setting-value">{{value}}</div>
-    <div class="infobox-setting-value" ng-if="isSet(valueDescription)">({{valueDescription}})</div>
+    <div class="infobox-setting-value-comment" ng-if="isSet(valueDescription)">({{valueDescription}})</div>
     <zem-help-popover class="infobox-setting-value" ng-if="isSet(tooltip)" content="tooltip" placement="top"></zem-help-popover>
 
-    <div class="infobox-setting-additional-info" ng-if="isSet(detailsLabel) && isSet(detailsContent) && !detailsVisible">
-        (Show {{detailsLabel}})
+    <div class="infobox-setting-info" ng-show="isSet(detailsLabel) && isSet(detailsContent) && !detailsVisible">
+        <a ng-click="showDetails()" class="infobox-details-link">(Show {{detailsLabel}})</a> 
     </div>
 
-    <div class="infobox-setting-additional-info-dropped" ng-if="isSet(detailsLabel) && isSet(detailsContent) && detailsVisible">
-        <div ng-show="detailsVisible">{{ detailsContent }}</div>
-        <div ng-show="detailsVisible">Hide {{ detailsLabel }}</div>
+    <div class="infobox-setting-info-dropped" ng-show="isSet(detailsLabel) && isSet(detailsContent) && detailsVisible">
+        <div class="infobox-setting-info-dropped-content" ng-show="detailsVisible">{{ detailsContent }}</div>
+        <div ng-show="detailsVisible">
+            <a ng-click="hideDetails()" class="infobox-details-link">Hide {{ detailsLabel }}</a>
+        </div>
     </div>
 </div>
