--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -663,15 +663,19 @@ div[datepicker] {
 
 .graph-container {
 	display: inline-block;
-	width: 60%
+	width: 70%;
 }
 
 .infobox-container {
 	display: inline-block;
-	width: 40%;
+	width: 30%;
 	position: absolute; 
 	height: 100%; 
 	overflow: auto
+}
+
+.infobox-button {
+	margin-left: 5px;
 }
 
 .infobox-background {
