--- a/client/one/partials/ad_group_contentadsplus.html
+++ b/client/one/partials/ad_group_contentadsplus.html
@@ -1,10 +1,14 @@
 <div class="page page-ad-group-ads-plus">
     <div class="section">
-        <div class="graph-infobox-parent">
-            <div class="graph-container">
+        <div ng-if="!hasPermission('zemauth.can_see_infobox')" class="graph-infobox-parent">
+            <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
+        </div>
+
+        <div ng-if="hasPermission('zemauth.can_see_infobox')" class="graph-infobox-parent">
+            <div class="graph-container" style="width:{{graphWidth || 100}}%">
                 <zem-chart ng-class="{'chart-hidden': chartHidden}" zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
             </div>
-            <div class="infobox-container">
+            <div class="infobox-container" style="width:{{infoboxWidth || 0}}%">
                 <zem-infobox></zem-infobox>
             </div>
         <div>
