Lots of minor tweaks and improvements

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -684,6 +684,40 @@ div[datepicker] {
 
 .infobox {
 	padding: 5px;
+
+	color: #414141;
+    font-weight: 600;
+}
+
+.infobox-active-circle-icon-gray {
+    .state-icon-placeholder();
+    background-image: url('img/active_circle_icon_gray.svg');
+}
+
+.infobox-status {
+	text-align:right;
+	display: inline-block;
+	min-width: 20px;
+	vertical-align: top;
+	margin-top: 7px;
+	margin-left: 0px;
+}
+
+.infobox-header {
+	display: inline-block; 
+	width: 100%;
+}
+
+.infobox-title {
+	color: #414141;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.infobox-subtitle {
+	color: #414141;
+    font-size: 13px;
+    font-weight: 600;
 }
 
 .infobox-setting-label {
