--- a/client/one/partials/ad_group_contentadsplus.html
+++ b/client/one/partials/ad_group_contentadsplus.html
@@ -9,7 +9,7 @@
                 <zem-chart ng-class="{'chart-hidden': chartHidden}" zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
             </div>
             <div class="infobox-container" style="width:{{infoboxWidth || 0}}%">
-                <zem-infobox></zem-infobox>
+                <zem-infobox header="infoboxHeader" settings="infoboxSettings"></zem-infobox>
             </div>
         <div>
     </div>
