--- a/client/one/partials/zem_infobox_setting.html
+++ b/client/one/partials/zem_infobox_setting.html
@@ -1,34 +1,34 @@
 <div>
     <div class="infobox-setting-label">{{label}}</div>
     
-    <div style="display:inline-block; vertical-align:top;">
-    <div class="infobox-setting-icon" ng-if="isSet(icon)">
-        <span ng-switch="icon">
-            <span ng-switch-when="happy">
-                <span width=10 height=10 style="background:green">&nbsp;</span>
+    <div style="display:table; vertical-align:top;">
+        <div class="infobox-setting-icon" ng-if="isSet(icon)">
+            <span ng-switch="icon">
+                <span ng-switch-when="happy">
+                    <span width=10 height=10 style="background:green">&nbsp;</span>
+                </span>
+                <span ng-switch-when="contempt">
+                    <span width=10 height=10 style="background:yellow">&nbsp;</span>
+                </span>
+                <span ng-switch-when="sad">
+                    <span width=10 height=10 style="background:red">&nbsp;</span>
+                </span>
             </span>
-            <span ng-switch-when="contempt">
-                <span width=10 height=10 style="background:yellow">&nbsp;</span>
-            </span>
-            <span ng-switch-when="sad">
-                <span width=10 height=10 style="background:red">&nbsp;</span>
-            </span>
-        </span>
-    </div>
-
-    <div class="infobox-setting-value">{{value}}</div>
-    <div class="infobox-setting-value-comment" ng-if="isSet(valueDescription)">({{valueDescription}})</div>
-    <zem-help-popover class="infobox-setting-value" ng-if="isSet(tooltip)" content="tooltip" placement="top"></zem-help-popover>
-
-    <div class="infobox-setting-info" ng-show="isSet(detailsLabel) && isSet(detailsContent) && !detailsVisible">
-        <a ng-click="showDetails()" class="infobox-details-link">(Show {{detailsLabel}})</a> 
-    </div>
-
-    <div class="infobox-setting-info-dropped" ng-show="isSet(detailsLabel) && isSet(detailsContent) && detailsVisible">
-        <div class="infobox-setting-info-dropped-content" ng-show="detailsVisible">{{ detailsContent }}</div>
-        <div ng-show="detailsVisible">
-            <a ng-click="hideDetails()" class="infobox-details-link">Hide {{ detailsLabel }}</a>
         </div>
-    </div>
+
+        <div class="infobox-setting-value">{{value}}</div>
+        <div class="infobox-setting-value-comment" ng-if="isSet(valueDescription)">({{valueDescription}})</div>
+        <zem-help-popover class="infobox-setting-value" ng-if="isSet(tooltip)" content="tooltip" placement="top"></zem-help-popover>
+
+        <div class="infobox-setting-info" ng-show="isSet(detailsLabel) && isSet(detailsContent) && !detailsVisible">
+            <a ng-click="showDetails()" class="infobox-details-link">(Show {{detailsLabel}})</a> 
+        </div>
+
+        <div class="infobox-setting-info-dropped" ng-show="isSet(detailsLabel) && isSet(detailsContent) && detailsVisible">
+            <div class="infobox-setting-info-dropped-content" ng-show="detailsVisible">{{ detailsContent }}</div>
+            <div ng-show="detailsVisible">
+                <a ng-click="hideDetails()" class="infobox-details-link">Hide {{ detailsLabel }}</a>
+            </div>
+        </div>
     </div>
 </div>
